--- a/challenge/api/package.json
+++ b/challenge/api/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "nodemon index",
+    "start": "set NODE_ENV=production && node index"
   },
   "keywords": [],
   "author": "Massimo Di Berardino",
@@ -15,5 +16,8 @@
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.9.2"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.2"
   }
 }
