--- a/challenge/api/package.json
+++ b/challenge/api/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "dev": "nodemon index",
-    "start": "set NODE_ENV=production && node index"
+    "start": "set NODE_ENV=production && node index",
+    "insert:users": "node ./src/scripts/insertUsers"
   },
   "keywords": [],
   "author": "Massimo Di Berardino",
