--- a/challenge/api/.env.example
+++ b/challenge/api/.env.example
@@ -1,5 +1,6 @@
 //CONFIG
 PORT=
+TWO_HOURS_IN_SEC=
 NODE_ENV=
 
 //MONGO
@@ -7,3 +8,6 @@ DB_USER=
 DB_PASSWORD=
 DB_HOST=
 DB_NAME=
+
+//AUTH
+AUTH_JWT_SECRET=
