--- a/challenge/frontend/package.json
+++ b/challenge/frontend/package.json
@@ -11,6 +11,7 @@
   "author": "Massimo Di Berardino",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.19.2",
     "babel-eslint": "^10.0.3",
     "babel-polyfill": "^6.26.0",
     "eslint": "^6.8.0",
